<resources>
    <string name="app_name">NoteApp</string>

    <string name="menu_item_notes">Notes</string>
    <string name="menu_item_daily_notes">Diary</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_about">About</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="button_ok">OK</string>

    <string name="error_wrong_menu_item">Wrong menu item id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings used for fragments for navigation -->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>